tests/ui/spirv-attr/multiple.stderr
error: only one storage class attribute is allowed on a struct
 --> $DIR/multiple.rs:8:18
  |
8 | #[spirv(uniform, uniform)]
  |                  ^^^^^^^
  |
note: previous storage class attribute
 --> $DIR/multiple.rs:8:9
  |
8 | #[spirv(uniform, uniform)]
  |         ^^^^^^^

error: only one storage class attribute is allowed on a struct
  --> $DIR/multiple.rs:11:18
   |
11 | #[spirv(uniform, push_constant)]
   |                  ^^^^^^^^^^^^^
   |
note: previous storage class attribute
  --> $DIR/multiple.rs:11:9
   |
11 | #[spirv(uniform, push_constant)]
   |         ^^^^^^^

error: only one intrinsic type attribute is allowed on a struct
  --> $DIR/multiple.rs:14:18
   |
14 | #[spirv(sampler, sampler)]
   |                  ^^^^^^^
   |
note: previous intrinsic type attribute
  --> $DIR/multiple.rs:14:9
   |
14 | #[spirv(sampler, sampler)]
   |         ^^^^^^^

error: only one intrinsic type attribute is allowed on a struct
  --> $DIR/multiple.rs:19:5
   |
19 |     image_type(dim = "Dim2D", depth = 0, arrayed = 0, multisampled = 0, sampled = 1, image_format = "Unknown"),
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: previous intrinsic type attribute
  --> $DIR/multiple.rs:18:5
   |
18 |     sampler,
   |     ^^^^^^^

error: only one #[spirv(block)] attribute is allowed on a struct
  --> $DIR/multiple.rs:23:16
   |
23 | #[spirv(block, block)]
   |                ^^^^^
   |
note: previous #[spirv(block)] attribute
  --> $DIR/multiple.rs:23:9
   |
23 | #[spirv(block, block)]
   |         ^^^^^

error: only one entry-point attribute is allowed on a function
  --> $DIR/multiple.rs:26:17
   |
26 | #[spirv(vertex, vertex)]
   |                 ^^^^^^
   |
note: previous entry-point attribute
  --> $DIR/multiple.rs:26:9
   |
26 | #[spirv(vertex, vertex)]
   |         ^^^^^^

error: only one entry-point attribute is allowed on a function
  --> $DIR/multiple.rs:29:17
   |
29 | #[spirv(vertex, fragment)]
   |                 ^^^^^^^^
   |
note: previous entry-point attribute
  --> $DIR/multiple.rs:29:9
   |
29 | #[spirv(vertex, fragment)]
   |         ^^^^^^

error: only one builtin attribute is allowed on a function param
  --> $DIR/multiple.rs:34:23
   |
34 |     #[spirv(position, position)] _same_builtin: (),
   |                       ^^^^^^^^
   |
note: previous builtin attribute
  --> $DIR/multiple.rs:34:13
   |
34 |     #[spirv(position, position)] _same_builtin: (),
   |             ^^^^^^^^

error: only one builtin attribute is allowed on a function param
  --> $DIR/multiple.rs:35:23
   |
35 |     #[spirv(position, vertex_index)] _diff_builtin: (),
   |                       ^^^^^^^^^^^^
   |
note: previous builtin attribute
  --> $DIR/multiple.rs:35:13
   |
35 |     #[spirv(position, vertex_index)] _diff_builtin: (),
   |             ^^^^^^^^

error: only one #[spirv(descriptor_set)] attribute is allowed on a function param
  --> $DIR/multiple.rs:37:33
   |
37 |     #[spirv(descriptor_set = 0, descriptor_set = 0)] _same_descriptor_set: (),
   |                                 ^^^^^^^^^^^^^^^^^^
   |
note: previous #[spirv(descriptor_set)] attribute
  --> $DIR/multiple.rs:37:13
   |
37 |     #[spirv(descriptor_set = 0, descriptor_set = 0)] _same_descriptor_set: (),
   |             ^^^^^^^^^^^^^^^^^^

error: only one #[spirv(descriptor_set)] attribute is allowed on a function param
  --> $DIR/multiple.rs:38:33
   |
38 |     #[spirv(descriptor_set = 0, descriptor_set = 1)] _diff_descriptor_set: (),
   |                                 ^^^^^^^^^^^^^^^^^^
   |
note: previous #[spirv(descriptor_set)] attribute
  --> $DIR/multiple.rs:38:13
   |
38 |     #[spirv(descriptor_set = 0, descriptor_set = 1)] _diff_descriptor_set: (),
   |             ^^^^^^^^^^^^^^^^^^

error: only one #[spirv(binding)] attribute is allowed on a function param
  --> $DIR/multiple.rs:40:26
   |
40 |     #[spirv(binding = 0, binding = 0)] _same_binding: (),
   |                          ^^^^^^^^^^^
   |
note: previous #[spirv(binding)] attribute
  --> $DIR/multiple.rs:40:13
   |
40 |     #[spirv(binding = 0, binding = 0)] _same_binding: (),
   |             ^^^^^^^^^^^

error: only one #[spirv(binding)] attribute is allowed on a function param
  --> $DIR/multiple.rs:41:26
   |
41 |     #[spirv(binding = 0, binding = 1)] _diff_binding: (),
   |                          ^^^^^^^^^^^
   |
note: previous #[spirv(binding)] attribute
  --> $DIR/multiple.rs:41:13
   |
41 |     #[spirv(binding = 0, binding = 1)] _diff_binding: (),
   |             ^^^^^^^^^^^

error: only one #[spirv(flat)] attribute is allowed on a function param
  --> $DIR/multiple.rs:43:19
   |
43 |     #[spirv(flat, flat)] _flat: (),
   |                   ^^^^
   |
note: previous #[spirv(flat)] attribute
  --> $DIR/multiple.rs:43:13
   |
43 |     #[spirv(flat, flat)] _flat: (),
   |             ^^^^

error: only one #[spirv(unroll_loops)] attribute is allowed on a function
  --> $DIR/multiple.rs:46:23
   |
46 | #[spirv(unroll_loops, unroll_loops)]
   |                       ^^^^^^^^^^^^
   |
note: previous #[spirv(unroll_loops)] attribute
  --> $DIR/multiple.rs:46:9
   |
46 | #[spirv(unroll_loops, unroll_loops)]
   |         ^^^^^^^^^^^^

error: aborting due to 15 previous errors

